--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "ddb:ls-table": "aws dynamodb list-tables --endpoint-url http://localhost:8000 --region local",
     "ddb:create-table": "npx ts-node ddb/ddb-create-table.ts",
     "ddb:delete-table": "npx ts-node ddb/ddb-delete-table.ts PRODUCTS",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "lint": "eslint './src/**/*.{ts,tsx,js,jsx}'",
+    "lint:fix": "eslint './src/**/*.{ts,tsx,js,jsx}' --fix",
+    "prettier": "prettier --check src"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -21,7 +24,13 @@
     "@aws-sdk/client-dynamodb": "^3.332.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
